--- a/index.html
+++ b/index.html
@@ -19,25 +19,22 @@
 
         <h1>ninchen33</h1>
 
-        <h2>2021</h2>
-        <a class="gallery" href="" target="_blank">1</a>
-        <a class="gallery" href="" target="_blank">2</a>
-        <a class="gallery" href="" target="_blank">3</a>
-        <a class="gallery" href="" target="_blank">4</a>
-
-        <h2>2022</h2>
-        <a class="gallery" href="" target="_blank">5</a>
+        <h2>ninchen33's Gallery</h2>
+        <a class="gallery" href="" target="_blank">夕陽下的瀝源邨</a>
+        <a class="gallery" href="" target="_blank">博康邨冬菇亭</a>
+        <a class="gallery" href="" target="_blank">鬧市風景</a>
+        <a class="gallery" href="" target="_blank">禾輋邨</a>
+        <a class="gallery" href="" target="_blank">渡頭灣風景</a>
 
         <h2>Useful links</h2>
 
-        <a href="" target="_blank">6</a>
+        <a href="https://humanum.arts.cuhk.edu.hk/Lexis/lexi-can/" target="_blank">粵語審查庫</a>
         <a href="404.html" target="_blank">404</a>
         <a href="" target="_blank">7</a>
         
         <h2>Follow Me On</h2>
 
         <div class="channels">
-            <a href="" target="_blank">Blog</a>
             <a href="https://www.youtube.com/channel/UCDr0eHQU_sVSlRbouH5jSxw" target="_blank">YouTube</a>
             <a href="https://www.instagram.com/ninchen33/" target="_blank">Instagram</a>
         </div>
