--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>ninchen33's Gallery</h2>
         <a class="gallery" href="" target="_blank">夕陽下的瀝源邨</a>
         <a class="gallery" href="" target="_blank">博康邨冬菇亭</a>
-        <a class="gallery" href="" target="_blank">鬧市風景</a>
+        <a class="gallery" href="https://adobe.ly/3H6fmfb" target="_blank">鬧市風景</a>
         <a class="gallery" href="" target="_blank">禾輋邨</a>
         <a class="gallery" href="" target="_blank">渡頭灣風景</a>
 
