--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
     <body>
         <br>
         <div class="c1">
-            <img src="img/p1.jpg">
+            <img src="img/p1.jpg" alt="Rrofile picture">
         </div>
 
         <h1>ninchen33</h1>
 
         <h2>ninchen33's Gallery</h2>
-        <a class="gallery" href="" target="_blank">夕陽下的瀝源邨</a>
-        <a class="gallery" href="" target="_blank">博康邨冬菇亭</a>
+        <a class="gallery" href="https://adobe.ly/3JhFBRO" target="_blank">夕陽下的瀝源邨</a>
+        <a class="gallery" href="https://adobe.ly/3ssnbYN" target="_blank">博康邨冬菇亭</a>
         <a class="gallery" href="https://adobe.ly/3H6fmfb" target="_blank">鬧市風景</a>
-        <a class="gallery" href="" target="_blank">禾輋邨</a>
-        <a class="gallery" href="" target="_blank">渡頭灣風景</a>
+        <a class="gallery" href="https://adobe.ly/33WxolZ" target="_blank">禾輋邨</a>
+        <a class="gallery" href="https://adobe.ly/3qttoRI" target="_blank">渡頭灣風景</a>
+        <a class="gallery" href="https://adobe.ly/3erDL2t" target="_blank">Forza Horizon 5</a>
 
         <h2>Useful links</h2>
 
