--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <a class="gallery" href="https://adobe.ly/3H6fmfb" target="_blank">鬧市風景</a>
         <a class="gallery" href="https://adobe.ly/33WxolZ" target="_blank">禾輋邨</a>
         <a class="gallery" href="https://adobe.ly/3qttoRI" target="_blank">渡頭灣風景</a>
+        <a class="gallery" href="https://adobe.ly/3Fpbvtu" target="_blank">Forza Horizon 4</a>
         <a class="gallery" href="https://adobe.ly/3erDL2t" target="_blank">Forza Horizon 5</a>
 
         <h2>Useful links</h2>
